<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.raj.bcs421rajdeliwalahwktip.tipActivity">

    <TextView
        android:text="@string/billTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/bill_amount" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="0.00"
        android:ems="10"
        android:layout_below="@+id/bill_amount"
        android:layout_alignParentStart="true"
        android:id="@+id/bill_text" />

    <TextView
        android:text="@string/tipFinal"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/textView8" />

    <TextView
        android:text="0.00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignParentEnd="true"
        android:id="@+id/tipValue"
        android:layout_alignStart="@+id/textView8" />

    <TextView
        android:text="0.00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tipValue"
        android:layout_alignStart="@+id/tipValue"
        android:id="@+id/tipPercent"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="0%"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/orderSeekBar"
        android:layout_toStartOf="@+id/textView8"
        android:id="@+id/order_seekValue" />

    <CheckBox
        android:text="@string/orderCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_check"
        android:layout_below="@+id/order_text"
        android:layout_alignParentStart="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/friend_rating"
        android:layout_below="@+id/friend_check"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:text="@string/friendlinessCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/friend_check"
        android:layout_below="@+id/Friendliness_service"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/friendlinessTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Friendliness_service"
        android:layout_below="@+id/speed_rating"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:text="@string/speedCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/speed_check"
        android:layout_below="@+id/speed_service"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/orderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_text"
        android:layout_below="@+id/friend_rating"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/speedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/speed_service"
        android:layout_marginTop="67dp"
        android:layout_below="@+id/bill_text"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/restaurantNameEditText"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/speed_rating"
        android:layout_below="@+id/speed_check"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/orderSeekBar"
        android:layout_below="@+id/order_check"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/speed_check" />

    <Button
        android:text="@string/tipSaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tipSaveButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/RestaurantNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_below="@+id/bill_text"
        android:layout_alignParentStart="true" />
</RelativeLayout>
