<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:text="@string/restaurantDetailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/restName" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text=""
        android:ems="10"
        android:id="@+id/resturantEditText" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/tipAmountDetailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tipAmountTextView" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text=""
            android:ems="10"
            android:id="@+id/tipAmountEditText" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/tipPercentDetailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tipPercentTextView" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text=""
            android:ems="10"
            android:id="@+id/tipPercentEditText" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/speedDetailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/speedDetailTextView" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text=""
            android:ems="10"
            android:id="@+id/speedDetailEditText" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/friendDetailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/friendDetailTextView" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text=""
            android:ems="10"
            android:id="@+id/friendDetailEditText" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/orderDetailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/orderDetailTextView" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text=""
            android:ems="10"
            android:id="@+id/orderDetailEditText" />
    </LinearLayout>

</LinearLayout>